# art-dag

./: .gitignore  README.md  pyproject.toml
artdag/: __init__.py  activities.py  cache.py  cli.py  client.py  dag.py  engine.py  executor.py  server.py
artdag/activitypub/: __init__.py  activity.py  actor.py  ownership.py  signatures.py
artdag/analysis/: __init__.py  analyzer.py  audio.py  schema.py  video.py
artdag/nodes/: __init__.py  compose.py  effect.py  encoding.py  source.py  transform.py
artdag/planning/: __init__.py  planner.py  schema.py  tree_reduction.py
artdag/registry/: __init__.py  registry.py
docs/: EXECUTION_MODEL.md  IPFS_PRIMARY_ARCHITECTURE.md  L1_STORAGE.md  OFFLINE_TESTING.md
effects/identity/: README.md  requirements.txt
examples/: simple_sequence.yaml  test_local.sh  test_plan.py
registry/: activities.json  registry.json
registry/actors/: giles.json
scripts/: compute_repo_hash.py  register_identity_effect.py  setup_actor.py  sign_assets.py
tests/: __init__.py  test_activities.py  test_cache.py  test_dag.py  test_engine.py  test_executor.py
