[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artdag"
version = "0.1.0"
description = "Content-addressed DAG execution engine with ActivityPub ownership"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Giles", email = "giles@rose-ash.com"}
]
keywords = ["dag", "content-addressed", "activitypub", "video", "processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
analysis = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]
cv = [
    "opencv-python>=4.8.0",
]
all = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8.0",
]

[project.scripts]
artdag = "artdag.cli:main"

[project.urls]
Homepage = "https://artdag.rose-ash.com"
Repository = "https://github.com/giles/artdag"

[tool.setuptools.packages.find]
where = ["."]
include = ["artdag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
